[project]
name = "dgb-n64-dbg"
version = "0.0.1"
description = "Debugger for dgb's n64 emulator"
dependencies = [
  "textual",
  "capstone",
  "requests"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = [
  "*.py",
  "*.tcss"
]
exclude = [
  "__pycache__",
  "*.nix",
  "*.lock"
]

[project.scripts]
dgb-n64-dbg = "dbg:main"
